--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,6 +24,23 @@
   color: #333;
   border: #ccc 1px solid; }
 
+.container {
+  max-width: 1100px;
+  overflow: hidden;
+  padding: 0 3rem;
+  padding-top: 8rem;
+  margin-bottom: 3rem; }
+
+.text-primary {
+  color: #17a2b8; }
+
+.lead {
+  font-size: 1.4rem;
+  margin-bottom: 1rem; }
+
+.large {
+  font-size: 3rem; }
+
 * {
   box-sizing: border-box;
   margin: 0;
