--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,63 @@
+.m-1 {
+  margin: 1rem; }
+
+.my-1 {
+  margin: 1rem 0; }
+
+.p-1 {
+  padding: 1rem; }
+
+.py-1 {
+  padding: 1rem 0; }
+
+.m-2 {
+  margin: 2rem; }
+
+.my-2 {
+  margin: 2rem 0; }
+
+.p-2 {
+  padding: 2rem; }
+
+.py-2 {
+  padding: 2rem 0; }
+
+.m-3 {
+  margin: 3rem; }
+
+.my-3 {
+  margin: 3rem 0; }
+
+.p-3 {
+  padding: 3rem; }
+
+.py-3 {
+  padding: 3rem 0; }
+
+.m-4 {
+  margin: 4rem; }
+
+.my-4 {
+  margin: 4rem 0; }
+
+.p-4 {
+  padding: 4rem; }
+
+.py-4 {
+  padding: 4rem 0; }
+
+.m-5 {
+  margin: 5rem; }
+
+.my-5 {
+  margin: 5rem 0; }
+
+.p-5 {
+  padding: 5rem; }
+
+.py-5 {
+  padding: 5rem 0; }
+
 .bg-primary {
   background-color: #17a2b8;
   color: #fff; }
@@ -40,6 +100,37 @@
 
 .large {
   font-size: 3rem; }
+
+.form-text {
+  display: block;
+  margin-top: .3rem;
+  color: #888; }
+
+.form-group {
+  margin: 1rem; }
+  .form-group input {
+    width: 80%;
+    padding: .5rem;
+    display: block;
+    font-size: 1.2rem;
+    border: 1px solid #ccc; }
+
+.btn {
+  background-color: #17a2b8;
+  color: #fff;
+  padding: .4rem;
+  text-align: center;
+  border: none;
+  padding: .5rem;
+  transition: all .7s ease-in-out;
+  cursor: pointer;
+  margin-right: 1rem;
+  width: 20% !important; }
+  .btn-primary:hover {
+    background-color: #d4f5fa; }
+  .btn-light:hover {
+    background-color: #b2bac1;
+    color: black; }
 
 * {
   box-sizing: border-box;
@@ -108,18 +199,18 @@ img {
     margin: auto; }
   .landing .buttons {
     margin: 1rem; }
-    .landing .buttons .btn {
-      background-color: #17a2b8;
-      color: #fff;
-      padding: .4rem;
-      text-align: center;
-      border: none;
-      padding: .5rem;
-      transition: all .7s ease-in-out;
-      cursor: pointer;
-      margin-right: 1rem; }
-      .landing .buttons .btn-primary:hover {
-        background-color: #d4f5fa; }
-      .landing .buttons .btn-light:hover {
-        background-color: #b2bac1;
-        color: black; }
+  .landing .btn {
+    background-color: #17a2b8;
+    color: #fff;
+    padding: .4rem;
+    text-align: center;
+    border: none;
+    padding: .5rem;
+    transition: all .7s ease-in-out;
+    cursor: pointer;
+    margin-right: 1rem; }
+    .landing .btn-primary:hover {
+      background-color: #d4f5fa; }
+    .landing .btn-light:hover {
+      background-color: #b2bac1;
+      color: black; }
